internal
    - Added better penalty box logging
    - bugfix: CTX init function added

0.7.0rc3
    - minimal dequoting of quoted strings for LDAP searches

0.7.0rc2
    - better description of QUEUE_INCOMING_MAIL in simta.conf
    - bugfix for default RED actions
    - better logging for Expand
    - make a bad Dinode re-read not a terminal error in envelope.c
    - differentiate between implied or defined SMTP in the red structure
    - add LOCALHOST token to RED rules
    - removed env_dup() from envelope.c, unused function

0.7.0rc1
    - install simexpander by default
    - Isolate D from RE in RED
    - QUEUE_INCOMING_SMTP_MAIL option added

2006-11-09
    - Multi-alias RE for PASSWORD and ALIAS

2006-11-08
    - Bugfix for MX host RE Isolation

2006-11-04
    - TARPIT directive added
    - Incoming SMTP connection metrics

2006-11-03
 - CHANGELOG added
 - libwrap #define fix, thanks Gab!

2006-10-27
 - SMTP error messages changed for postmaster
 - Leaky queue bugfix: only requeue if there's a schedule advantage
 - Added DNS, Punt, Delivery, and Dfile inode logging
 - Cleaned up DNS delivery code
 - Bugfix: Isolate R from E

2006-08-16
 - LDAP enhancements
 - Faster requing for remote up remote queues
 - Checksums for incoming SMTP content filter
 - D Rules
 - spelling errors fixed

0.6.4
 - MAIL FROM DNS Connection dropping bugfix
 - -Q works with the new queue runner
 - simta.conf bugfixes
 - RBL off by one bug fixed
 - ALIAS_FILE config option added
 - MAX_MESSAGE_SIZE dropped connection bugfix
 - command line args synched with config file
 - multiple RBL added back in

0.6.3
 - expand and receive share same address verification code
 - reject incoming messages if oversized
 - punting fixed with new queue runner
 - bugfixes

0.6.2
 - partial postmaster receive bug fix

0.6.1
 - MIN_WORK_TIME feature
 - sleep() -> nanosleep() bugfix
 - simta.conf template
 - bugfixes

0.6.0
 - new master queue runner
 - fixed simta -C bug

0.5.7