@@ -116,14 +116,22 @@
 #IGNORE_CONNECT_IN_DNS_ERRORS
 
 # Enable RBL.  Domain is the RBL server, URL is a URL to give as a SMTP
-# error message to blocked connections.
+# error message to blocked connections.  If an address is found in a BLOCK
+# list, it is blocked, if it is found in an ACCEPT list, it will be accepted
+# and no further lookups will take place.  Order in the config file gives
+# precedence to the lookups.
 #
-#RBL_DOMAIN			DOMAIN			URL
+#RBL_BLOCK			DOMAIN			URL
+#RBL_ACCEPT			DOMAIN			URL
 
 # Enable user RBLs.  Domain is the RBL server, URL is a URL to give as a SMTP
-# error message to blocked connections.
+# error message to blocked connections.  If an address is found in a BLOCK
+# list, it is blocked, if it is found in an ACCEPT list, it will be accepted
+# and no further lookups will take place.  Order in the config file gives
+# precedence to the lookups.
 #
-#USER_RBL_DOMAIN		DOMAIN			URL
+#USER_RBL_BLOCK			DOMAIN			URL
+#USER_RBL_ACCEPT		DOMAIN			URL
 
 # Allow -f option with simsendmail.
 #
