@@ -137,12 +137,8 @@ extern char				*simta_mail_filter;
 extern char				*simta_base_dir;
 extern char				simta_hostname[];
 extern char				*simta_punt_host;
-extern struct stab_entry	        *simta_rbls;
-extern struct stab_entry         	*simta_user_rbls;
-extern char				*simta_rbl_domain;
-extern char				*simta_rbl_url;
-extern char				*simta_user_rbl_domain;
-extern char				*simta_user_rbl_url;
+extern struct rbl		        *simta_rbls;
+extern struct rbl	         	*simta_user_rbls;
 extern char				*simta_queue_filter;
 extern char				*simta_default_alias_db;
 extern char				*simta_default_passwd_file;
